--- a/style/index.css
+++ b/style/index.css
@@ -29,7 +29,7 @@ footer, header, hgroup, menu, nav, section {
     padding:0;
     margin:0;
     max-width:100%;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Patrick Hand', cursive;
     /* border:1px solid grey;  */
 }
 
@@ -42,7 +42,7 @@ body{
     font-size:1.8rem;
     line-height:1.5;
     color:#4f4f4f;
-    background-color:#FBFFFB;
+    background-color: #193269 ;
 }
 h1{
     color:black;
@@ -53,9 +53,9 @@ a{
     color:black;
     font-size:1.8rem;
     padding:1% 5%;
-    border-radius: 1rem;
+    /* border-radius: 1rem; */
     border:1px solid black;
-    width:25%
+    width:25%;
 }
 button{
     font-size:1.8rem;
