--- a/style/index.css
+++ b/style/index.css
@@ -39,10 +39,10 @@ html{
     font-size:62.5%;
 }
 body{
-    font-size:1.8rem;
+    font-size:2.5rem;
     line-height:1.5;
-    color:#4f4f4f;
-    background-color: #193269 ;
+    color:black;
+    background-color: #243457  ;
 }
 h1{
     color:black;
@@ -74,7 +74,7 @@ button{
 /*Body Styles*/
 
 header{
-    background-color: gray;
+    background-color:   #001b56 ;
 }
 .pfp img{
     width: 600px;
@@ -139,6 +139,7 @@ footer{
     display:flex;
     flex-direction: column;
     text-align:center;
-    background-color: gray;
-}
+    background-color:#001b56 ;
+    padding: 5%;
 
+}
